--- a/internal/static/index.html
+++ b/internal/static/index.html
@@ -9,7 +9,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Goplow</h1>
+            <div class="header-content">
+                <div class="logo">Goplow</div>
+                <div class="search-container">
+                    <input type="text" id="searchInput" class="search-input" placeholder="Filter by event type, title, or keywords...">
+                </div>
+            </div>
         </div>
 
         <div class="messages-section" id="messagesContainer">
