--- a/test_sse.html
+++ b/test_sse.html
@@ -1,69 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SSE Test</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Server-Sent Events Test</h1>
     <div>
-        <input type="text" id="messageInput" placeholder="Type a message...">
-        <button onclick="sendMessage()">Send Message</button>
+      <input type="text" id="messageInput" placeholder="Type a message..." />
+      <button onclick="sendMessage()">Send Message</button>
     </div>
     <div id="messages"></div>
     <div id="status"></div>
 
     <script>
-        let eventSource = null;
-        const messagesDiv = document.getElementById('messages');
-        const statusDiv = document.getElementById('status');
+      let eventSource = null;
+      const messagesDiv = document.getElementById("messages");
+      const statusDiv = document.getElementById("status");
 
-        function setupSSE() {
-            eventSource = new EventSource('http://localhost:8080/api/events');
+      function setupSSE() {
+        eventSource = new EventSource("http://localhost:8001/api/events");
 
-            eventSource.onopen = function() {
-                statusDiv.innerHTML = '<p style="color: green;">SSE Connected!</p>';
-            };
+        eventSource.onopen = function () {
+          statusDiv.innerHTML = '<p style="color: green;">SSE Connected!</p>';
+        };
 
-            eventSource.onmessage = function(event) {
-                console.log('Received SSE message:', event.data);
-                const message = JSON.parse(event.data);
-                const messageElement = document.createElement('div');
-                messageElement.innerHTML = `<strong>${message.id}:</strong> ${message.text} <em>(${new Date(message.timestamp).toLocaleTimeString()})</em>`;
-                messagesDiv.appendChild(messageElement);
-            };
+        eventSource.onmessage = function (event) {
+          console.log("Received SSE message:", event.data);
+          const message = JSON.parse(event.data);
+          const messageElement = document.createElement("div");
+          messageElement.innerHTML = `<strong>${message.id}:</strong> ${
+            message.text
+          } <em>(${new Date(message.timestamp).toLocaleTimeString()})</em>`;
+          messagesDiv.appendChild(messageElement);
+        };
 
-            eventSource.onerror = function(error) {
-                console.error('SSE error:', error);
-                statusDiv.innerHTML = '<p style="color: red;">SSE Error!</p>';
-            };
-        }
+        eventSource.onerror = function (error) {
+          console.error("SSE error:", error);
+          statusDiv.innerHTML = '<p style="color: red;">SSE Error!</p>';
+        };
+      }
 
-        function sendMessage() {
-            const input = document.getElementById('messageInput');
-            const message = input.value.trim();
-            if (!message) return;
+      function sendMessage() {
+        const input = document.getElementById("messageInput");
+        const message = input.value.trim();
+        if (!message) return;
 
-            fetch('http://localhost:8080/api/messages', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded'
-                },
-                body: 'message=' + encodeURIComponent(message)
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Message sent:', data);
-                input.value = '';
-            })
-            .catch(error => {
-                console.error('Error sending message:', error);
-            });
-        }
+        fetch("http://localhost:8001/api/messages", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/x-www-form-urlencoded",
+          },
+          body: "message=" + encodeURIComponent(message),
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            console.log("Message sent:", data);
+            input.value = "";
+          })
+          .catch((error) => {
+            console.error("Error sending message:", error);
+          });
+      }
 
-        // Initialize SSE connection when page loads
-        setupSSE();
+      // Initialize SSE connection when page loads
+      setupSSE();
     </script>
-</body>
+  </body>
 </html>
